# agar-hs

./: .gitignore  README.md  agar-hs.cabal
src/: Actions.hs  Main.hs  Models.hs  Parse.hs
