name:                agar-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable agar-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ==4.7.0.2
                     , websockets >=0.9.4.0
                     , bytestring >=0.10.4.0
                     , binary ==0.7.1.0
                     , data-binary-ieee754 >=0.4.4
                     , text >=1.2.0.4
                     , stm >=2.4.2
                     , array

  hs-source-dirs:      src

  default-language:    Haskell2010
